--- a/Meet/meet.css
+++ b/Meet/meet.css
@@ -27,7 +27,7 @@ html {
   background-size: cover;
   position: relative;
     /* border: solid 1px; */
-    margin-bottom: 100px;
+    padding-bottom: 100px;
     margin-top: 60px;
   }
   
